swap background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background: url("../assets/img/bg.jpg") #2a5555 scroll;
 }
 
 hr {
@@ -10859,7 +10860,7 @@ video.bg-video {
 
 @media (pointer: coarse) and (hover: none) {
   body {
-    background: url("../assets/img/bg-mobile-fallback.jpg") #2a5555 no-repeat center center scroll;
+    background: url("../assets/img/bg.jpg") #2a5555 scroll;
     background-size: cover;
   }
   body video {
